--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ h1{
 
 .intro-banner{
 
-    background-image: url("/m_ban.png");
+    background-image: url("m_ban.png");
     background-size: cover;
     width:100%;
     height: 100%;
